# EyeFiGeotagger

./: CMakeLists.txt  README  exif_tagging.cpp  exif_tagging.hpp  geotagger.cpp  location_http_request.cpp  location_http_request.hpp
